<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.philmckenzie.final_app.MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="182dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_name">

        <RadioButton
            android:id="@+id/burrito-option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/burrito" />

        <RadioButton
            android:id="@+id/taco-option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/taco" />
    </RadioGroup>

    <EditText
        android:id="@+id/food_name"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <ToggleButton
        android:id="@+id/meat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="12dp"
        android:text="ToggleButton"
        android:textOff="@string/meat"
        android:textOn="@string/veggie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/message"
        android:layout_width="222dp"
        android:layout_height="100dp"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/food_image"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Switch
        android:id="@+id/gluten"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/gf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meat" />

    <ImageView
        android:id="@+id/food_image"
        android:layout_width="93dp"
        android:layout_height="102dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Spinner
        android:id="@+id/location"
        android:layout_width="218dp"
        android:layout_height="49dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:entries="@array/locations"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</android.support.constraint.ConstraintLayout>
